Bug 1571376 - Make all themes support non-disappearing scrollbar sizes. r=mstange

That is, so that the select dropdown button always take the size of a
native scrollbar rather than a potentially custom scrollbar.

Differential Revision: https://phabricator.services.mozilla.com/D73261